# wax

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml
contrib/: PKGBUILD  wax.service
crates/wax-cli/: Cargo.toml
crates/wax-cli/src/: config.rs  main.rs
crates/wax-daemon/: Cargo.toml
crates/wax-daemon/src/: config.rs  main.rs  state.rs
crates/wax-ipc/: Cargo.toml
crates/wax-ipc/src/: lib.rs
crates/wax-store/: Cargo.toml
crates/wax-store/benches/: store.rs
crates/wax-store/src/: lib.rs
dev/bench/: data.js
