[workspace]
members = [
  "crates/wax-daemon",
  "crates/wax-store",
  "crates/wax-cli",
  "crates/wax-ipc",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

redb = "4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
image = "0.25"
clap = { version = "4", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
] }
tokio = { version = "1", features = ["full"] }
