[package]
name = "wax-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
] }
dirs = "6"
wax-ipc = { path = "../wax-ipc" }
wax-store = { path = "../wax-store" }
serde_json = "1"
libc = "0.2"
