[package]
name = "wax-cli"
version.workspace = true
edition = "2024"

[[bin]]
name = "wax"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
] }
dirs = "6"
wax-ipc = { path = "../wax-ipc" }
wax-store = { path = "../wax-store" }
serde_json = "1"
libc = "0.2"
