[package]
name = "wax-daemon"
version.workspace = true
edition = "2024"

[dependencies]
serde = { workspace = true }
toml = "0.8"
dirs = "6"

wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rustix = { version = "1", features = ["pipe"] }
wax-store = { path = "../wax-store" }
wax-ipc = { path = "../wax-ipc" }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.149"
regex = "1.12.3"
