[package]
name = "wax-store"
version.workspace = true
edition = "2024"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "store"
harness = false

[dependencies]
redb = "4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
dirs = "6"
